# Ampel-alerts

./: .buildinfo  api.html  genindex.html  index.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  environment.pickle
.github/workflows/: docs.yml  main.yml
_modules/: index.html
_modules/ampel/abstract/: AbsAlertFilter.html  AbsAlertRegister.html  AbsAlertSupplier.html
_modules/ampel/alert/: AlertConsumer.html  FilterBlocksHandler.html
_modules/ampel/alert/load/: DirAlertLoader.html  FileAlertLoader.html  TarAlertLoader.html
_modules/ampel/alert/reject/: BaseAlertRegister.html  DBRejectedLogsHandler.html  FullActiveAlertRegister.html  FullAlertRegister.html  GeneralActiveAlertRegister.html  GeneralAlertRegister.html  MinimalActiveAlertRegister.html  MinimalAlertRegister.html
ampel/abstract/: AbsAlertSupplier.py
ampel/alert/: AlertConsumer.py  AlertFileList.py  BaseAlertSupplier.py  FilterBlock.py  FilterBlocksHandler.py  FilteringAlertSupplier.py
ampel/alert/filter/: BasicMultiFilter.py
ampel/alert/load/: DirAlertLoader.py  TarAlertLoader.py  TarballWalker.py
ampel/alert/reject/: BaseAlertRegister.py  DBRejectedLogsHandler.py  FullAlertRegister.py  MinimalAlertRegister.py
ampel/dev/: AutoCompleteBenchmark.py
ampel/template/: EasyAlertConsumerTemplate.py
tests/: conftest.py  dummy_units.py  template_job.yaml  test_AbsAlertLoader.py  test_AbsEasyChannelTemplate.py  test_AlertConsumer.py  test_EasyAlertConsumerTemplate.py  testing-config.yaml
